--- a/privacy_choices.html
+++ b/privacy_choices.html
@@ -11,31 +11,28 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #e0f7fa, #80deea);
-      color: #004d40;
+      font-family: "Helvetica Neue", Arial, sans-serif;
+      background-color: #f5f5f5;
+      color: #222;
       text-align: center;
-      padding: 20px;
     }
-    .container {
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 40px 30px;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    .message {
+      padding: 20px 30px;
+      border-left: 6px solid #007acc;
+      background-color: #ffffff;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      border-radius: 8px;
+      max-width: 400px;
     }
-    h1 {
-      margin-bottom: 20px;
-      font-size: 1.8rem;
-    }
-    p {
-      font-size: 1.1rem;
-      line-height: 1.6;
+    .message p {
+      margin: 0;
+      font-size: 1rem;
+      line-height: 1.5;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Privacy Choices</h1>
+  <div class="message">
     <p>This app does not currently provide user privacy choice settings.</p>
   </div>
 </body>
